kubernetes/ingress/api-gateway-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /v1/management
            pathType: Prefix
            backend:
              service:
                name: user-management-service-v1
                port:
                  number: 8080

          - path: /v2.0.0/management
            pathType: Prefix
            backend:
              service:
                name: user-management-service-v2
                port:
                  number: 8080

          - path: /v1/workspace
            pathType: Prefix
            backend:
              service:
                name: workspace-service-v1
                port:
                  number: 8086

          - path: /v2/workspace
            pathType: Prefix
            backend:
              service:
                name: workspace-service-v2
                port:
                  number: 8086
